[package]
name = "async_processing"
version = "0.1.0"
authors = ["sergorl <serg.neworl@gmail.com>"]

[lib]
name = "async"
path = "src/lib.rs"

[dependencies]
tokio = "0.1.0"
tokio-io = "0.1.5"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
futures = "0.1.17"
futures-cpupool = "0.1.8"
bytes = "0.4.6"
tokio-core = "0.1.12"